--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     </footer>
 
     <script>
-        window.alert("Pam, alguem te disse que vc está linda hj?")
-        window.alert("msm dizendo escute mais uma vez vc ta linda pra crlh e vc é muito especial pra mim S2")
+        window.alert("é só um teste")
+        
     </script>
 </body>
 
